# agos

./: .continue-here.md  .gitignore  0426.md  AGENTS.md  Cargo.toml  README.md  autoresearch-hook-context.json  autoresearch-lessons.md  autoresearch-state.json  autoresearch-state.prev.json  config.toml.example  research-results.prev.tsv  research-results.tsv  smoke_test_full_cycle.py
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md
.trellis/: .template-hashes.json
config/: agent-memos.toml.example
doc/: 0415-00记忆认知架构.md  0415-世界模型.md  0415-价值层.md  0415-元认知层.md  0415-公式与公理.md  0415-反刍机制.md  0415-工作记忆.md  0415-技能记忆.md  0415-概念对照表.md  0415-注意力状态.md  0415-理论吸收清单.md  0415-真值层.md  0415-自我模型.md  0415-认知索引.md  github编译.md  zig交叉编译.md  理论实现对应.md
migrations/: 0001_foundation.sql  0002_ingest_foundation.sql  0003_lexical_sidecar.sql  0003_lexical_sidecar_jieba.sql  0004_truth_layer_governance.sql  0005_rumination_writeback.sql  0006_embedding_foundation.sql  0007_layered_memory_dsl.sql  0008_layered_memory_review_metadata.sql  0009_self_model_snapshots.sql  0010_world_model_snapshots.sql
src/: lib.rs  main.rs
tests/: agent_search.rs  agent_search_skill_fallback.rs  attention_state.rs  dual_channel_retrieval.rs  foundation_schema.rs  ingest_pipeline.rs  lexical_search.rs  memory_assessment.rs  memory_bridge.rs  memory_classifier.rs  memory_classifier_report.rs  memory_dsl.rs  memory_escaping.rs  memory_flatten.rs  memory_flow.rs  memory_pipeline.rs  memory_pipeline_builder.rs  memory_pipeline_default.rs  memory_store.rs  (+24 more)
(+294 files in other folders)
